adiciona minha foto na página

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Jefferson dos Santos Nina</h1>
+    <img src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
 </body>
 </html>
