--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <h1>Jefferson dos Santos Nina</h1>
     <img src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
     <p>Brasileiro, 25 anos, São João de Meriti - RJ</p>
+    <div>
+        <h3>Habilidades:</h3>
+        <ul>
+            <li>HTML 5</li>
+            <li>CSS 3</li>
+            <li>JavaScript</li>
+        </ul>
+    </div>
 </body>
 </html>
