adiciona um link para foto principal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Jefferson dos Santos Nina</h1>
-    <img src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
+    <img id="img-principal" src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
     <p>Brasileiro, 25 anos, São João de Meriti - RJ</p>
     <div>
         <h3>Habilidades:</h3>
@@ -17,6 +17,7 @@
             <li>CSS 3</li>
             <li>JavaScript</li>
         </ul>
+        <p><a href="#img-principal">Foto</a></p>
     </div>
 </body>
 </html>
