--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li>JavaScript</li>
         </ul>
         <p><a href="#img-principal">Foto</a></p>
+        <p>Visite meu perfil no <a target="_blank" href="https://github.com/ojeff-dev">Github</a>!</p>
     </div>
 </body>
 </html>
