altera o tamanho da foto principal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Jefferson dos Santos Nina</h1>
-    <img id="img-principal" src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
+    <img width="200px" id="img-principal" src="./img/img-principal.jpeg" alt="Foto de Jefferson dos Santos Nina">
     <p>Brasileiro, 25 anos, São João de Meriti - RJ</p>
     <div>
         <h3>Habilidades:</h3>
